--> Added a style to fix the overflow issue in long messages.

--- a/iCrush-SPA/src/app/members/member-messages/member-messages.component.css
+++ b/iCrush-SPA/src/app/members/member-messages/member-messages.component.css
@@ -133,3 +133,6 @@
     color: #228fff;
 }
 
+.content p{
+    word-break: break-all;
+}
